# Epic-Framework

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  coding-standard  eclipse-coding-style.xml  todo
docs/: coding-standard  container-API  iterator-API  plan
nbproject/: Makefile-Debug.mk  Makefile-Default.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Default.bash  Package-Release.bash  configurations.xml  project.xml
source/epic.bindings.opencl/: Buffer.h  CLContext.cpp  CLContext.h  CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  Helpers.h  Image2D.cpp  Image2D.h  Image3D.h  ImageFormat.h  Kernel.cpp  Kernel.h  OpenCLException.h  Platform.cpp  Platform.h  Program.cpp  Program.h
source/epic.bindings.opencl/tests/: openclTest.cpp
source/epic.bindings.opengl/: Buffer.cpp  Buffer.h
source/epic.core/: ASCIIString.cpp  ASCIIString.h  Algorithms.h  Array.h  ArraySlice.h  Assert.h  BoundsCheck.h  CMakeLists.txt  Compiler.h  Core.h  Endian.h  HashTable.h  LinkedList.h  Macros.h  MapReduce.h  Pointer.h  STLCompatibility.h  SharedPointer.h  String.cpp  String.h  Types.h
source/epic.core/tests/: ArrayTest.cpp  PointerTest.cpp  StringTest.cpp  assertTest.cpp
source/epic.core/threading/: Thread.h  Thread_linuxImpl.cpp
source/epic.image/: Docs.cpp  FloatImage.cpp  FloatImage.h  FloatImageSampler.cpp  FloatImageSampler.h  FloatPixelFormat.h  Image.cpp  Image.h  Pixel.h  PixelF.h  PixelFormat.h  R32FImage.cpp  R32FImage.h  R8Image.cpp  R8Image.h  RG32FImage.cpp  RG32FImage.h  RG8Image.cpp  RG8Image.h  RGB32FImage.cpp  RGB32FImage.h  RGB8Image.cpp  RGB8Image.h  RGBA32FImage.cpp  RGBA32FImage.h  RGBA8Image.cpp  RGBA8Image.h  SamplerParameters.h
source/epic.image/loader/: ImageIO.cpp  ImageIO.h  ImageLoader.cpp  ImageLoader.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h
source/epic.image/processing/: ImageProcessor.cpp  ImageProcessor.h  ImageUtils.cpp  ImageUtils.h  Kernel.h
source/epic.image/tests/: imageTest.cpp  kernelTests.cpp
source/epic.math/: Math.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  VectorMath.h
source/epic.math/tests/: matrixTests.cpp
source/epic.opencl/: Buffer.cpp  Buffer.h  CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  Helpers.h  Image2D.cpp  Image2D.h  Image3D.cpp  Image3D.h  ImageFormat.h  Kernel.cpp  Kernel.h  NDRange.cpp  NDRange.h  OpenCLException.h  Platform.cpp  Platform.h  Program.cpp  Program.h  Sampler.cpp  Sampler.h
source/epic.opencl/tests/: openclTest.cpp
source/epic.opengl/: Buffer.cpp  Buffer.h  OpenGL.h
source/epic.util/allocator/: Allocator.h
source/epic.util/logging/: Appender.cpp  Appender.h  ConsoleAppender.cpp  ConsoleAppender.h  Level.h  Logger.cpp  Logger.h  LoggerRepository.cpp  LoggerRepository.h
test/epic.core/: arrayTest.cpp  hashTableTest.cpp  linkedListTest.cpp
test/epic.math/: fixedMatrixTests.cpp  vector2Test.cpp  vectorTests.cpp
test/epic.opencl/: openclTest.cpp
test/epic.util.logging/: loggerTest.cpp
